--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "method-override": "*",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
 	"mongodb":">=0.9.9",
 	"connect":"1.8.5",
 	"connect-mongo":">=0.1.7",
-	"express-session": "~1.0.4"
+	"express-session": "~1.0.4",
+    "connect-flash":"*"
   }
 
 }
